--- a/Primeiro_projeto/meu site.html
+++ b/Primeiro_projeto/meu site.html
@@ -6,14 +6,16 @@
 </head>
 <body>
 	<!-- <a href="https://www.instagram.com/depaulin_eric/"> --><!-- </a> -->
+	<!-- minha imagen  -->
 	<img src="minhaft.jpg" alt="Minha foto" width="100px">
-	<header id="header1">
-		<h1>Meu site .com</h1>
-	</header>
-		<h2>projetin bonito</h2>
-	<footer id="foot">
-		<p>se liga nesse projetin <a href="#">clique aqui</a></p>
-	</footer>
+	
+		<header id="header1">
+			<h1>Meu site .com</h1>
+		</header>
+				<h2>projetin bonito</h2>
+			<footer id="foot">
+				<p>se liga nesse projetin <a href="#">clique aqui</a></p>
+			</footer>
 
 </body>
 </html>
