Declara Id e Classes para implementação do CSS

--- a/Primeiro_projeto/meu site.html
+++ b/Primeiro_projeto/meu site.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<title>Meu site</title>
 </head>
 <body>
 	<!-- <a href="https://www.instagram.com/depaulin_eric/"> --><!-- </a> -->
 	<!-- minha imagen  -->
-	<header id="header1">
-		<img src="minhaft.jpg" alt="Minha foto" width="100px">
-		<h1>Meu site .com</h1>
+	<header class="header1">
+		<img src="minhaft.jpg" alt="Minha foto" width="100px" class="ft">
+		<h1 id="titulo">Meu site .com</h1>
 	</header>
-		<footer id="foot">
-			<p>se liga nesse projetin <a href="#">clique aqui</a></p>
+		<footer class="foot">
+			<p>se liga nesse projetin <a href="#" class="link">clique aqui</a></p>
 		</footer>
 
 </body>
